tests/should_fail/type_string_plus_int.nv
module main

// SHOULD FAIL: String + Int without cast (type mismatch in binary op)
let x = "hello" + 42
